infrastructure/thumbor.yaml
apiVersion: v1
kind: Service
metadata:
  name: thumbor
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: thumbor
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thumbor
  template:
    metadata:
      labels:
        app: thumbor
    spec:
      volumes:
      - name: cache-storage
        emptyDir: {}
      containers:
      - name: thumbor
        image: minimalcompact/thumbor:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - name: cache-storage
            mountPath: /data
