infrastructure/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: api.michigantechcourses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo1
            port:
              number: 80
  - host: thumbor.michigantechcourses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thumbor
            port:
              number: 80
  tls:
  - hosts:
    - api.michigantechcourses.com
    secretName: api-ingress-cert
  - hosts:
    - thumbor.michigantechcourses.com
    secretName: thumbor-ingress-cert
